@@ -1,5 +1,8 @@
 Release Notes
 
+* 5/8/2017
+  * added nSimEvents
+
 * 5/3/2017
   * fixed eventStatus=merged for objStore_ID=None
 
